--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,3 +23,10 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish win-x64
+      run: dotnet publish -p:PublishProfile=win-x64
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        name: winx64
+        path: DiscordEventBot.Service/bin/Release/net5.0/publish/win-x64/**
