--- a/DiscordEventBot.Model/DiscordEventBot.Model.csproj
+++ b/DiscordEventBot.Model/DiscordEventBot.Model.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DiscordEventBot.Common\DiscordEventBot.Common.csproj" />
+  </ItemGroup>
+
 </Project>
