basic event module added

--- a/DiscordEventBot.Common/DiscordEventBot.Common.csproj
+++ b/DiscordEventBot.Common/DiscordEventBot.Common.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DiscordEventBot.Model\DiscordEventBot.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Resources\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
