--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,9 +20,9 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore DiscordEventBot.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build DiscordEventBot.sln --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test DiscordEventBot.sln --no-build --verbosity normal
       
 #   - name: Publish win-x64
 #     run: dotnet publish -p:PublishProfile=win-x64
