--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,13 @@ jobs:
       with:
         fetch-depth: 0
       
+    - name: Set up QEMU
+      id: qemu
+      uses: docker/setup-qemu-action@v1
+      with:
+        image: tonistiigi/binfmt:latest
+        platforms: all
+      
     - id: repo
       uses: ASzc/change-string-case-action@v1
       with:
