--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,3 +48,79 @@ jobs:
         name: ${{ matrix.profile }}
         path: DiscordEventBot.Service/bin/Release/net5.0/publish/${{ matrix.profile }}/**
         retention-days: 1
+        
+  build-docker-linux:
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            platform: linux/arm64
+            tag: linux-arm64
+          - os: ubuntu-latest
+            platform: linux/amd64
+            tag: linux-x64
+          - os: ubuntu-latest
+            platform: linux/arm/v7
+            tag: linux-armv7
+          - os: windows-latest
+            platform: windows/amd64
+            tag: win-x64
+    
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+      
+    - id: repo
+      uses: ASzc/change-string-case-action@v1
+      with:
+        string: ${{ github.repository }}
+      
+    - name: Set up QEMU
+      id: qemu
+      uses: docker/setup-qemu-action@v1
+      with:
+        image: tonistiigi/binfmt:latest
+        platforms: ${{ matrix.platform }}
+        
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .  
+    
+    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
+    
+  build-docker-windows:
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest
+            platform: windows/amd64
+            tag: win-x64
+    
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        
+    - id: repo
+      uses: ASzc/change-string-case-action@v1
+      with:
+        string: ${{ github.repository }}
+        
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .
+    
+    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
