--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,14 +5,11 @@ on:
   push:
     paths-ignore:
       - '.github/**'
-    branches: 
-      - main
     tags:
       - v*
 
 jobs:
   build-natives:
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -27,7 +24,6 @@ jobs:
             profile: "win-arm"
           - os: macos-latest
             profile: "osx-x64"
-
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
@@ -38,10 +34,8 @@ jobs:
       run: dotnet restore DiscordEventBot.sln
     - name: Build
       run: dotnet build DiscordEventBot.sln --no-restore
-      
     - name: Publish
       run: dotnet publish DiscordEventBot.sln -p:PublishProfile=${{ matrix.profile }}
-
     - name: Upload
       uses: actions/upload-artifact@v2.2.4
       with:
@@ -50,7 +44,6 @@ jobs:
         retention-days: 1
         
   build-docker-linux:
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -67,36 +60,29 @@ jobs:
           - os: windows-latest
             platform: windows/amd64
             tag: win-x64
-    
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-      
     - id: repo
       uses: ASzc/change-string-case-action@v1
       with:
         string: ${{ github.repository }}
-      
     - name: Set up QEMU
       id: qemu
       uses: docker/setup-qemu-action@v1
       with:
         image: tonistiigi/binfmt:latest
         platforms: ${{ matrix.platform }}
-        
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
     - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .  
-    
     - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
     
   build-docker-windows:
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -104,23 +90,33 @@ jobs:
           - os: windows-latest
             platform: windows/amd64
             tag: win-x64
-    
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-        
     - id: repo
       uses: ASzc/change-string-case-action@v1
       with:
         string: ${{ github.repository }}
-        
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
     - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .
-    
     - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
+  
+  create-docker-manifest:
+    runs-on: ubuntu-latest
+    needs: [build-docker-linux, build-docker-windows]
+    steps:
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - id: repo
+      uses: ASzc/change-string-case-action@v1
+      with:
+        string: ${{ github.repository }}
+    - run: docker manifest create ${{ steps.repo.outputs.lowercase }}:latest ${{ steps.repo.outputs.lowercase }}:latest-win-x64 ${{ steps.repo.outputs.lowercase }}:latest-linux-armv7 ${{ steps.repo.outputs.lowercase }}:latest-linux-x64 ${{ steps.repo.outputs.lowercase }}:latest-linux-arm64
