--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,8 +56,34 @@ jobs:
             platform: linux/amd64
             tag: linux-x64
             file: Dockerfile
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - id: repo
+      uses: ASzc/change-string-case-action@v1
+      with:
+        string: ${{ github.repository }}
+    - name: Set up QEMU
+      id: qemu
+      uses: docker/setup-qemu-action@v1
+      with:
+        image: tonistiigi/binfmt:latest
+        platforms: ${{ matrix.platform }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} --platform ${{ matrix.platform }} .  
+    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
+
+  build-docker-linux-armv7:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
           - os: ubuntu-latest
-            platform: linux/amd64
             tag: linux-armv7
             file: Dockerfile.armv7
     steps:
@@ -79,7 +105,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} --platform ${{ matrix.platform }} .  
+    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} .  
     - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
     
   build-docker-windows:
@@ -108,7 +134,7 @@ jobs:
   
   create-docker-manifest:
     runs-on: ubuntu-latest
-    needs: [build-docker-linux, build-docker-windows]
+    needs: [build-docker-linux, build-docker-windows, build-docker-linux-armv7]
     steps:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
