--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
 #            profile: "win-x64"
 #          - os: windows-latest
 #            profile: "win-arm"
-#          - os: macos-latest
+#          - os: ubuntu-latest
 #            profile: "osx-x64"
 #    steps:
 #    - uses: actions/checkout@v2
@@ -78,72 +78,80 @@ jobs:
     - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} --platform ${{ matrix.platform }} .  
     - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
 
-  build-docker-linux-armv7:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            tag: linux-armv7
-            file: Dockerfile.armv7
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - id: repo
-      uses: ASzc/change-string-case-action@v1
-      with:
-        string: ${{ github.repository }}
-    - name: Set up QEMU
-      id: qemu
-      uses: docker/setup-qemu-action@v1
-      with:
-        image: tonistiigi/binfmt:latest
-        platforms: ${{ matrix.platform }}
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} .  
-    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
-    
-  build-docker-windows:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: windows-latest
-            platform: windows/amd64
-            tag: win-x64
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - id: repo
-      uses: ASzc/change-string-case-action@v1
-      with:
-        string: ${{ github.repository }}
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .
-    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
+#  build-docker-linux-armv7:
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        include:
+#          - os: ubuntu-latest
+#            tag: linux-armv7
+#            file: Dockerfile.armv7
+#    steps:
+#    - uses: actions/checkout@v2
+#      with:
+#        fetch-depth: 0
+#    - id: repo
+#      uses: ASzc/change-string-case-action@v1
+#      with:
+#        string: ${{ github.repository }}
+#    - name: Set up QEMU
+#      id: qemu
+#      uses: docker/setup-qemu-action@v1
+#      with:
+#        image: tonistiigi/binfmt:latest
+#        platforms: ${{ matrix.platform }}
+#    - name: Login to Docker Hub
+#      uses: docker/login-action@v1
+#      with:
+#        username: ${{ secrets.DOCKERHUB_USERNAME }}
+#        password: ${{ secrets.DOCKERHUB_TOKEN }}
+#    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} .  
+#    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
+#    
+#  build-docker-windows:
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        include:
+#          - os: windows-latest
+#            platform: windows/amd64
+#            tag: win-x64
+#    steps:
+#    - uses: actions/checkout@v2
+#      with:
+#        fetch-depth: 0
+#    - id: repo
+#      uses: ASzc/change-string-case-action@v1
+#      with:
+#        string: ${{ github.repository }}
+#    - name: Login to Docker Hub
+#      uses: docker/login-action@v1
+#      with:
+#        username: ${{ secrets.DOCKERHUB_USERNAME }}
+#        password: ${{ secrets.DOCKERHUB_TOKEN }}
+#    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .
+#    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
+#  
+#  create-docker-manifest:
+#    runs-on: ubuntu-latest
+#    needs: [build-docker-linux, build-docker-windows, build-docker-linux-armv7]
+#    steps:
+#    - name: Login to Docker Hub
+#      uses: docker/login-action@v1
+#      with:
+#        username: ${{ secrets.DOCKERHUB_USERNAME }}
+#        password: ${{ secrets.DOCKERHUB_TOKEN }}
+#    - id: repo
+#      uses: ASzc/change-string-case-action@v1
+#      with:
+#        string: ${{ github.repository }}
+#    - run: docker manifest create ${{ steps.repo.outputs.lowercase }}:latest ${{ steps.repo.outputs.lowercase }}:latest-win-x64 ${{ steps.repo.outputs.lowercase }}:latest-linux-armv7 ${{ steps.repo.outputs.lowercase }}:latest-linux-x64 ${{ steps.repo.outputs.lowercase }}:latest-linux-arm64
+#    - run: docker manifest push ${{ steps.repo.outputs.lowercase }}:latest
   
-  create-docker-manifest:
+  create-release:
     runs-on: ubuntu-latest
-    needs: [build-docker-linux, build-docker-windows, build-docker-linux-armv7]
+    needs: [build-natives]
     steps:
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - id: repo
-      uses: ASzc/change-string-case-action@v1
-      with:
-        string: ${{ github.repository }}
-    - run: docker manifest create ${{ steps.repo.outputs.lowercase }}:latest ${{ steps.repo.outputs.lowercase }}:latest-win-x64 ${{ steps.repo.outputs.lowercase }}:latest-linux-armv7 ${{ steps.repo.outputs.lowercase }}:latest-linux-x64 ${{ steps.repo.outputs.lowercase }}:latest-linux-arm64
-    - run: docker manifest push ${{ steps.repo.outputs.lowercase }}:latest
+    - name: Download all workflow run artifacts
+      uses: actions/download-artifact@v2
+    - run: tree
