--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,33 @@ on:
       - v*
 
 jobs:
+
+  set-version:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.gitversion.outputs.majorMinorPatch }}
+      major: ${{ steps.gitversion.outputs.major }}
+      minor: ${{ steps.gitversion.outputs.minor }}
+      patch: ${{ steps.gitversion.outputs.patch }}
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Setup .NET3
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.0.x
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.10
+      with:
+        versionSpec: '5.x'
+    - name: Determine Version
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v0.9.10
+        
   build-natives:
     runs-on: ${{ matrix.os }}
+    needs: [set-version]
     strategy:
       matrix:
         include:
@@ -24,6 +49,8 @@ jobs:
             profile: "win-arm"
           - os: ubuntu-latest
             profile: "osx-x64"
+          - os: ubuntu-latest
+            profile: "portable"
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
@@ -42,111 +69,102 @@ jobs:
         name: ${{ matrix.profile }}
         path: DiscordEventBot.Service/bin/Release/net5.0/publish/${{ matrix.profile }}/**
         retention-days: 1
-        
-#  build-docker-linux:
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      matrix:
-#        include:
-#          - os: ubuntu-latest
-#            platform: linux/arm64
-#            tag: linux-arm64
-#            file: Dockerfile
-#          - os: ubuntu-latest
-#            platform: linux/amd64
-#            tag: linux-x64
-#            file: Dockerfile
-#    steps:
-#    - uses: actions/checkout@v2
-#      with:
-#        fetch-depth: 0
-#    - id: repo
-#      uses: ASzc/change-string-case-action@v1
-#      with:
-#        string: ${{ github.repository }}
-#    - name: Set up QEMU
-#      id: qemu
-#      uses: docker/setup-qemu-action@v1
-#      with:
-#        image: tonistiigi/binfmt:latest
-#        platforms: ${{ matrix.platform }}
-#    - name: Login to Docker Hub
-#      uses: docker/login-action@v1
-#      with:
-#        username: ${{ secrets.DOCKERHUB_USERNAME }}
-#        password: ${{ secrets.DOCKERHUB_TOKEN }}
-#    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} --platform ${{ matrix.platform }} .  
-#    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
-#
-#  build-docker-linux-armv7:
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      matrix:
-#        include:
-#          - os: ubuntu-latest
-#            tag: linux-armv7
-#            file: Dockerfile.armv7
-#    steps:
-#    - uses: actions/checkout@v2
-#      with:
-#        fetch-depth: 0
-#    - id: repo
-#      uses: ASzc/change-string-case-action@v1
-#      with:
-#        string: ${{ github.repository }}
-#    - name: Set up QEMU
-#      id: qemu
-#      uses: docker/setup-qemu-action@v1
-#      with:
-#        image: tonistiigi/binfmt:latest
-#        platforms: ${{ matrix.platform }}
-#    - name: Login to Docker Hub
-#      uses: docker/login-action@v1
-#      with:
-#        username: ${{ secrets.DOCKERHUB_USERNAME }}
-#        password: ${{ secrets.DOCKERHUB_TOKEN }}
-#    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} .  
-#    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
-#    
-#  build-docker-windows:
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      matrix:
-#        include:
-#          - os: windows-latest
-#            platform: windows/amd64
-#            tag: win-x64
-#    steps:
-#    - uses: actions/checkout@v2
-#      with:
-#        fetch-depth: 0
-#    - id: repo
-#      uses: ASzc/change-string-case-action@v1
-#      with:
-#        string: ${{ github.repository }}
-#    - name: Login to Docker Hub
-#      uses: docker/login-action@v1
-#      with:
-#        username: ${{ secrets.DOCKERHUB_USERNAME }}
-#        password: ${{ secrets.DOCKERHUB_TOKEN }}
-#    - run: docker build -t ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .
-#    - run: docker push ${{ steps.repo.outputs.lowercase }}:latest-${{ matrix.tag }}
-#  
-#  create-docker-manifest:
-#    runs-on: ubuntu-latest
-#    needs: [build-docker-linux, build-docker-windows, build-docker-linux-armv7]
-#    steps:
-#    - name: Login to Docker Hub
-#      uses: docker/login-action@v1
-#      with:
-#        username: ${{ secrets.DOCKERHUB_USERNAME }}
-#        password: ${{ secrets.DOCKERHUB_TOKEN }}
-#    - id: repo
-#      uses: ASzc/change-string-case-action@v1
-#      with:
-#        string: ${{ github.repository }}
-#    - run: docker manifest create ${{ steps.repo.outputs.lowercase }}:latest ${{ steps.repo.outputs.lowercase }}:latest-win-x64 ${{ steps.repo.outputs.lowercase }}:latest-linux-armv7 ${{ steps.repo.outputs.lowercase }}:latest-linux-x64 ${{ steps.repo.outputs.lowercase }}:latest-linux-arm64
-#    - run: docker manifest push ${{ steps.repo.outputs.lowercase }}:latest
+
+  init-docker-builds:
+    runs-on: ubuntu-latest
+    outputs:
+      docker-repo: ${{ steps.repo.outputs.lowercase }}
+    steps:
+    - id: repo
+      uses: ASzc/change-string-case-action@v1
+      with:
+        string: ${{ github.repository }}
+
+  build-docker-linux:
+    runs-on: ${{ matrix.os }}
+    needs: [init-docker-builds]
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            platform: linux/arm64
+            tag: linux-arm64
+            file: Dockerfile
+          - os: ubuntu-latest
+            platform: linux/amd64
+            tag: linux-x64
+            file: Dockerfile
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up QEMU
+      id: qemu
+      uses: docker/setup-qemu-action@v1
+      with:
+        image: tonistiigi/binfmt:latest
+        platforms: ${{ matrix.platform }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} --platform ${{ matrix.platform }} .  
+    - run: docker push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }}
+
+  build-docker-linux-armv7:
+    runs-on: ${{ matrix.os }}
+    needs: [init-docker-builds]
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            tag: linux-armv7
+            file: Dockerfile.armv7
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up QEMU
+      id: qemu
+      uses: docker/setup-qemu-action@v1
+      with:
+        image: tonistiigi/binfmt:latest
+        platforms: ${{ matrix.platform }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} .  
+    - run: docker push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }}
+    
+  build-docker-windows:
+    runs-on: ${{ matrix.os }}
+    needs: [init-docker-builds]
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest
+            platform: windows/amd64
+            tag: win-x64
+    steps:
+    - uses: actions/checkout@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .
+    - run: docker push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }}
+  
+  create-docker-manifest:
+    runs-on: ubuntu-latest
+    needs: [init-docker-builds, build-docker-linux, build-docker-windows, build-docker-linux-armv7]
+    steps:
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - run: docker manifest create ${{ needs.init-docker-builds.outputs.docker-repo }}:latest ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-win-x64 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-armv7 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-x64 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-arm64
+    - run: docker manifest push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest
   
   create-release:
     runs-on: ubuntu-latest
