--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,11 +63,15 @@ jobs:
       run: dotnet build DiscordEventBot.sln --no-restore
     - name: Publish
       run: dotnet publish DiscordEventBot.sln -p:PublishProfile=${{ matrix.profile }}
+    - uses: papeloto/action-zip@v1
+      with:
+        files: DiscordEventBot.Service/bin/Release/net5.0/publish/${{ matrix.profile }}/
+        dest: ${{ matrix.profile }}-${{ needs.set-version.outputs.version }}.zip
     - name: Upload
       uses: actions/upload-artifact@v2.2.4
       with:
         name: ${{ matrix.profile }}
-        path: DiscordEventBot.Service/bin/Release/net5.0/publish/${{ matrix.profile }}/**
+        path: ${{ github.workspace }}/${{ matrix.profile }}-${{ needs.set-version.outputs.version }}.zip
         retention-days: 1
 
   init-docker-builds:
@@ -168,8 +172,16 @@ jobs:
   
   create-release:
     runs-on: ubuntu-latest
-    needs: [build-natives]
+    needs: [build-natives, set-version, create-docker-manifest]
     steps:
     - name: Download all workflow run artifacts
       uses: actions/download-artifact@v2
+    - name: Setup .NET3
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.0.x
+    - uses: gittools/actions/gitreleasemanager/setup@v0.9.10
+      name: Install GitReleaseManager
+      with:
+        versionSpec: '0.10.x'
     - run: tree
