--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
             profile: "win-arm"
           - os: ubuntu-latest
             profile: "osx-x64"
-          - os: ubuntu-latest
+          - os: windows-latest
             profile: "portable"
     steps:
     - uses: actions/checkout@v2
@@ -66,7 +66,7 @@ jobs:
     - uses: papeloto/action-zip@v1
       with:
         files: DiscordEventBot.Service/bin/Release/net5.0/publish/${{ matrix.profile }}/
-        dest: ${{ matrix.profile }}-${{ needs.set-version.outputs.version }}.zip
+        dest: ${{ github.event.repository.name }}-${{ matrix.profile }}-${{ needs.set-version.outputs.version }}.zip
     - name: Upload
       uses: actions/upload-artifact@v2.2.4
       with:
@@ -184,4 +184,18 @@ jobs:
       name: Install GitReleaseManager
       with:
         versionSpec: '0.10.x'
-    - run: tree
+    - uses: gittools/actions/gitreleasemanager/create@v0.9.10
+      name: Create release with GitReleaseManager
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        owner: '${{ github.repository_owner }}'
+        repository: '${{ github.event.repository.name }}'
+        milestone: '${{ steps.gitversion.outputs.majorMinorPatch }}'
+        name: 'v${{ steps.gitversion.outputs.majorMinorPatch }}'
+        assets: |
+          linux-arm/${{ github.event.repository.name }}-linux-arm-${{ needs.set-version.outputs.version }}.zip
+          linux-x64/${{ github.event.repository.name }}-linux-x64-${{ needs.set-version.outputs.version }}.zip
+          osx-x64/${{ github.event.repository.name }}-osx-x64-${{ needs.set-version.outputs.version }}.zip
+          win-arm/${{ github.event.repository.name }}-win-arm-${{ needs.set-version.outputs.version }}.zip
+          win-x64/${{ github.event.repository.name }}-win-x64-${{ needs.set-version.outputs.version }}.zip
+          portable/${{ github.event.repository.name }}-portable-${{ needs.set-version.outputs.version }}.zip
