--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -174,6 +174,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-natives, set-version, create-docker-manifest]
     steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Download all workflow run artifacts
       uses: actions/download-artifact@v2
     - name: Setup .NET3
@@ -190,8 +193,8 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         owner: '${{ github.repository_owner }}'
         repository: '${{ github.event.repository.name }}'
-        milestone: '${{ steps.gitversion.outputs.majorMinorPatch }}'
-        name: 'v${{ steps.gitversion.outputs.majorMinorPatch }}'
+        milestone: '${{ needs.set-version.outputs.version }}'
+        name: 'v${{ needs.set-version.outputs.version }}'
         assets: |
           linux-arm/${{ github.event.repository.name }}-linux-arm-${{ needs.set-version.outputs.version }}.zip
           linux-x64/${{ github.event.repository.name }}-linux-x64-${{ needs.set-version.outputs.version }}.zip
