--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -71,7 +71,7 @@ jobs:
 
   build-docker:
     runs-on: ${{ matrix.os }}
-    needs: [init-docker-builds, set-version, build-natives]
+    needs: [init-docker-builds, build-natives]
     strategy:
       matrix:
         include:
@@ -97,7 +97,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: portable
-    - run: 7z x portable/${{ github.event.repository.name }}-portable-${{ needs.set-version.outputs.version }}.zip -oapp/
+    - run: 7z x ${{ github.event.repository.name }}-portable-*.zip -oapp/
     - name: Set up QEMU
       if: runner.os == 'linux'
       id: qemu
