--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -122,5 +122,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - run: docker manifest rm ${{ needs.init-docker-builds.outputs.docker-repo }}:latest
+      continue-on-error: true
     - run: docker manifest create ${{ needs.init-docker-builds.outputs.docker-repo }}:latest ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-win-x64 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-arm ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-x64 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-arm64
     - run: docker manifest push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest
