--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -115,7 +115,7 @@ jobs:
   
   create-docker-manifest:
     runs-on: ubuntu-latest
-    needs: [build-docker]
+    needs: [build-docker, init-docker-builds]
     steps:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
