--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,7 @@ jobs:
 
   build-docker:
     runs-on: ${{ matrix.os }}
-    needs: [init-docker-builds, set-version]
+    needs: [init-docker-builds, set-version, build-natives]
     strategy:
       matrix:
         include:
