--- a/DiscordEventBot.Common/DiscordEventBot.Common.csproj
+++ b/DiscordEventBot.Common/DiscordEventBot.Common.csproj
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Resources\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
